--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==1.11
+asgiref==3.3.1
 django-cart==1.0.4
-freeze==1.0.10
-pytz==2017.3
-six==1.11.0
+Django==3.1.7
+pip==21.0.1
+pytz==2021.1
+setuptools==54.2.0
+sqlparse==0.4.1
