--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.3.1
+asgiref==3.5.0
 django-cart==1.0.4
-Django==3.1.7
-pip==21.0.1
-pytz==2021.1
-setuptools==54.2.0
-sqlparse==0.4.1
+Django==4.0.2
+pip==22.0.3
+pytz==2021.3
+setuptools==60.9.0
+sqlparse==0.4.2
+tzdata==2021.5
+wheel==0.37.1
